--- a/Basics_of_Linear_Algebra_for_Machine_Learning-Jason_Brownlee/02_matrix.ipynb
+++ b/Basics_of_Linear_Algebra_for_Machine_Learning-Jason_Brownlee/02_matrix.ipynb
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1271,10 +1271,13 @@
      "text": [
       "[[1 2]\n",
       " [3 4]]\n",
+      "\n",
       "[[2 0]\n",
       " [1 2]]\n",
+      "\n",
       "[[ 4  4]\n",
       " [10  8]]\n",
+      "\n",
       "[[ 4  4]\n",
       " [10  8]]\n"
      ]
@@ -1294,13 +1297,13 @@
     "    [2, 0],\n",
     "    [1, 2]\n",
     "])\n",
-    "print(B)\n",
+    "print(f'\\r\\n{B}')\n",
     "# multiply matrices using the dot function\n",
     "C = A.dot(B)\n",
-    "print(C)\n",
+    "print(f'\\r\\n{C}')\n",
     "# multiply matrices using the @ operator\n",
     "C = A @ B\n",
-    "print(C)"
+    "print(f'\\r\\n{C}')"
    ]
   },
   {
@@ -1382,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1395,9 @@
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
+      "\n",
       "[0.5 0.5]\n",
+      "\n",
       "[1.5 3.5 5.5]\n"
      ]
     }
@@ -1409,10 +1414,10 @@
     "print(A)\n",
     "# define vector\n",
     "B = array([0.5, 0.5])\n",
-    "print(B)\n",
+    "print(f'\\r\\n{B}')\n",
     "# multiply\n",
     "C = A.dot(B)\n",
-    "print(C)"
+    "print(f'\\r\\n{C}')"
    ]
   },
   {
@@ -1734,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1749,9 @@
       "[[1 2 3]\n",
       " [4 5 6]\n",
       " [7 8 9]]\n",
+      "\n",
       "[1 5 9]\n",
+      "\n",
       "[[1 0 0]\n",
       " [0 5 0]\n",
       " [0 0 9]]\n"
@@ -1764,10 +1771,10 @@
     "print(A)\n",
     "# extract diagonal\n",
     "d = diag(A)\n",
-    "print(d)\n",
+    "print(f'\\r\\n{d}')\n",
     "# create diagonal matrix\n",
     "D = diag(d)\n",
-    "print(D)"
+    "print(f'\\r\\n{D}')"
    ]
   },
   {
@@ -1889,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1898,10 +1905,13 @@
      "text": [
       "[[ 1  0]\n",
       " [ 0 -1]]\n",
+      "\n",
       "[[ 1  0]\n",
       " [ 0 -1]]\n",
+      "\n",
       "[[ 1.  0.]\n",
       " [-0. -1.]]\n",
+      "\n",
       "[[1 0]\n",
       " [0 1]]\n"
      ]
@@ -1919,11 +1929,11 @@
     "print(Q)\n",
     "# inverse equivalence\n",
     "V = inv(Q)\n",
-    "print(Q.T)\n",
-    "print(V)\n",
+    "print(f'\\r\\n{Q.T}')\n",
+    "print(f'\\r\\n{V}')\n",
     "# identity equivalence\n",
     "I = Q.dot(Q.T)\n",
-    "print(I)\n"
+    "print(f'\\r\\n{I}')\n"
    ]
   },
   {
@@ -1987,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1997,6 +2007,7 @@
       "[[1 2]\n",
       " [3 4]\n",
       " [5 6]]\n",
+      "\n",
       "[[1 3 5]\n",
       " [2 4 6]]\n"
      ]
@@ -2014,7 +2025,7 @@
     "print(A)\n",
     "# calculate transpose\n",
     "C = A.T\n",
-    "print(C)"
+    "print(f'\\r\\n{C}')"
    ]
   },
   {
@@ -2057,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2066,8 +2077,10 @@
      "text": [
       "[[1. 2.]\n",
       " [3. 4.]]\n",
+      "\n",
       "[[-2.   1. ]\n",
       " [ 1.5 -0.5]]\n",
+      "\n",
       "[[1.0000000e+00 0.0000000e+00]\n",
       " [8.8817842e-16 1.0000000e+00]]\n"
      ]
@@ -2084,10 +2097,10 @@
     "print(A)\n",
     "# invert matrix\n",
     "B = inv(A)\n",
-    "print(B)\n",
+    "print(f'\\r\\n{B}')\n",
     "# multiply A and B\n",
     "I = A.dot(B)\n",
-    "print(I)"
+    "print(f'\\r\\n{I}')"
    ]
   },
   {
@@ -2139,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2149,6 +2162,7 @@
       "[[1 2 3]\n",
       " [4 5 6]\n",
       " [7 8 9]]\n",
+      "\n",
       "15\n"
      ]
     }
@@ -2165,7 +2179,7 @@
     "print(A)\n",
     "# calculate trace\n",
     "B = trace(A)\n",
-    "print(B)"
+    "print(f'\\r\\n{B}')"
    ]
   },
   {
@@ -2210,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2220,6 +2234,7 @@
       "[[1 2 3]\n",
       " [4 5 6]\n",
       " [7 8 9]]\n",
+      "\n",
       "0.0\n"
      ]
     }
@@ -2236,7 +2251,7 @@
     "print(A)\n",
     "# calculate determinant\n",
     "B = det(A)\n",
-    "print(B)"
+    "print(f'\\r\\n{B}')"
    ]
   },
   {
@@ -2306,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2316,9 +2331,11 @@
       "[[0 0]\n",
       " [0 0]]\n",
       "0\n",
+      "\n",
       "[[1 2]\n",
       " [1 2]]\n",
       "1\n",
+      "\n",
       "[[1 2]\n",
       " [3 4]]\n",
       "2\n"
@@ -2340,14 +2357,14 @@
     "M1 = array([\n",
     "[1,2],\n",
     "[1,2]])\n",
-    "print(M1)\n",
+    "print(f'\\r\\n{M1}')\n",
     "mr1 = matrix_rank(M1)\n",
     "print(mr1)\n",
     "# rank 2\n",
     "M2 = array([\n",
     "[1,2],\n",
     "[3,4]])\n",
-    "print(M2)\n",
+    "print(f'\\r\\n{M2}')\n",
     "mr2 = matrix_rank(M2)\n",
     "print(mr2)"
    ]
@@ -2568,21 +2585,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "[[1 0 0 1 0 0]\n",
       " [0 0 2 0 0 1]\n",
       " [0 0 0 2 0 0]]\n",
+      "\n",
       "  (0, 0)\t1\n",
       "  (0, 3)\t1\n",
       "  (1, 2)\t2\n",
       "  (1, 5)\t1\n",
       "  (2, 3)\t2\n",
+      "\n",
       "[[1 0 0 1 0 0]\n",
       " [0 0 2 0 0 1]\n",
       " [0 0 0 2 0 0]]\n"
@@ -2598,13 +2618,13 @@
     "[1, 0, 0, 1, 0, 0],\n",
     "[0, 0, 2, 0, 0, 1],\n",
     "[0, 0, 0, 2, 0, 0]])\n",
-    "print(A)\n",
+    "print(f'\\r\\n{A}')\n",
     "# convert to sparse matrix (CSR method)\n",
     "S = csr_matrix(A)\n",
-    "print(S)\n",
+    "print(f'\\r\\n{S}')\n",
     "# reconstruct dense matrix\n",
     "B = S.todense()\n",
-    "print(B)"
+    "print(f'\\r\\n{B}')"
    ]
   },
   {
@@ -2627,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2637,6 +2657,7 @@
       "[[1 0 0 1 0 0]\n",
       " [0 0 2 0 0 1]\n",
       " [0 0 0 2 0 0]]\n",
+      "\n",
       "0.7222222222222222\n"
      ]
     }
@@ -2653,7 +2674,7 @@
     "print(A)\n",
     "# calculate sparsity\n",
     "sparsity = 1.0 - count_nonzero(A) / A.size\n",
-    "print(sparsity)"
+    "print(f'\\r\\n{sparsity}')"
    ]
   },
   {
